--- a/css/content.css
+++ b/css/content.css
@@ -53,7 +53,7 @@
 	}
 }
 .content main{
-	padding: 0 1em 1em;
+	padding: 0 0 1em;
 	width: 100vw;
 	max-width: 100%;
 	box-sizing: border-box;
@@ -94,9 +94,24 @@
 2 / 3 = 66.67 
 */
 .content main .aspect-ratio-box{
-	margin: 1.25em auto;
+	margin: 0 auto;
 	/* max-width: 800px; */
 	position: relative;
+	padding: 0;
+	max-width: calc(100% - 26px);
+}
+
+@media only screen and (min-width: 480px){
+	.content main .aspect-ratio-box{
+		width: calc(100% - 30px);
+		max-width: 700px;
+	}
+}
+@media only screen and (min-width: 992px){
+	.content main .aspect-ratio-box{
+		width: calc(100% - 46px);
+		max-width: 1366px;
+	}
 }
 .content main .aspect-ratio-box::after {
   content: "";
