--- a/css/content.css
+++ b/css/content.css
@@ -87,41 +87,41 @@
 	max-width: 650px;
 }
 /* Adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
-/* 
-9 / 16 = 56.25 
-8 / 10 = 80
-5 / 7 = 71.43
-2 / 3 = 66.67 
-*/
+/* Ratio box adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
+/* 8/10 = 80 | 5/7 = 71.43 | 2/3 = 66.67 | 9/16 = 56.25 */
 .content main .aspect-ratio-box{
 	margin: 0 auto;
+	padding: 0;
 	/* max-width: 800px; */
 	position: relative;
-	padding: 0;
+	height: calc(100vh - 41px - .3em - 20px);
 	max-width: calc(100% - 26px);
 }
-
 @media only screen and (min-width: 480px){
 	.content main .aspect-ratio-box{
+		height: calc(100vh - 47px - .3em - 20px);
 		width: calc(100% - 30px);
 		max-width: 700px;
 	}
 }
+@media only screen and (min-width: 768px){
+	.content main .aspect-ratio-box{
+		height: calc(100vh - 51px - .3em - 20px);
+	}
+}
 @media only screen and (min-width: 992px){
 	.content main .aspect-ratio-box{
+		height: calc(100vh - 63px - .3em - 20px);
 		width: calc(100% - 46px);
 		max-width: 1366px;
 	}
 }
 .content main .aspect-ratio-box::after {
   content: "";
-  padding-bottom: 66.67%;
+  /* padding-bottom: 66.67%; */
 	display: block;
 }
 .content main .aspect-ratio-box img {
-	/* border-radius: 10px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px; */
 	width: 100%;
   height: 100%;
 	position: absolute;
@@ -147,25 +147,25 @@
 	counter-reset: none;
 }
 .content main h2{
-	font-size: 2.2em;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 3.5em;
+	/* font-family: 'Source Sans Pro', sans-serif; */
 	font-weight: 400;
 	font-variant: small-caps;
 	hyphens: none;
 	line-height: 1.5em;
 	color: #fff;
 	background-color: rgb(66,66,66);
-	border-radius: 10px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	margin: 0;
-	padding: .25em .75em;
+	padding: .25em;
 	width: fit-content;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	opacity: .85;
+	/* opacity: .85; */
 	z-index: 15;
 }
 .content main h3{
