--- a/css/content.css
+++ b/css/content.css
@@ -70,6 +70,9 @@
 	margin: 0 auto;
 	max-width: 700px;
 }
+.content.zoomcasts main{
+	max-width: 700px;
+}
 .content.about.biographies main section{
 	max-width: 700px;
 }
@@ -94,6 +97,15 @@
 	text-align: left;
 	max-width: 700px;
 	padding: .25em 1em;
+	
+}
+@media only screen and (min-width: 992px){
+	.content.zoomcasts main,
+	.content main summary,
+	.content main section,
+	.content main aside{
+		max-width: 650px;
+	}
 }
 /* Adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
 /* Ratio box adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
@@ -106,7 +118,7 @@
 }
 @media only screen and (min-width: 992px){
 	.content main .aspect-ratio-box{
-		margin: 1em auto;
+		margin: 1.25em auto;
 		max-width: 900px;
 	}
 }
@@ -140,7 +152,8 @@
 .content main section section{
 	counter-reset: none;
 }
-.content main h2{
+.content.lesson-plans main h2,
+.content.syllabi main h2{
 	font-size: 1.5em;
 	font-weight: 400;
 	font-variant: small-caps;
@@ -161,14 +174,24 @@
 	opacity: .9;
 	z-index: 15;
 }
+.content.zoomcasts main h2{
+	font-size: 1.9em;
+	line-height: 1.2em;
+	color: #242424;
+}
 @media only screen and (min-width: 768px){
-	.content main h2{
+	.content.lesson-plans main h2,
+	.content.syllabi main h2{
 		font-size: 2.3em;
 		width: max-content;
 	}
+	.content.zoomcasts main h2{
+		margin: 1em auto;
+	}
 }
 @media only screen and (min-width: 992px){
-	.content main h2{
+	.content.lesson-plans main h2,
+	.content.syllabi main h2{
 		font-size: 2.5em;
 		width: max-content;
 	}
