--- a/css/carousel.css
+++ b/css/carousel.css
@@ -86,7 +86,7 @@
 	}
 }
 .carousel .carousel-item .carousel-caption p a{
-	font-size: .9em;
+	font-size: 1em;
 }
 .carousel .carousel-item .carousel-caption a{
 	text-decoration: underline;
