--- a/css/cluster.css
+++ b/css/cluster.css
@@ -239,11 +239,12 @@
 	-moz-border-radius: 5px;
 	margin: 1em 0;
 	padding: .3em;
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+	/* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 @media only screen and (min-width: 768px){
 	.cluster main section ul li{
-		margin: .5em;
+		margin: .75em .5em;
 		padding: .15em;
 		min-height: 35px;
 		flex: 1 0 calc(50% - 2px - 2em);
