--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,9 @@ main section ul{
 	padding: 0 1em 1em;
 	display: inline-block;
 }
+.mailing-list p{
+	text-align: center;
+}
 .mailing-list a.contribute{
 	color: #fff;
 	background-color: #395375;
@@ -515,11 +518,13 @@ a:focus img{
 		position: absolute;
 	}
 }
-/* Main nav */
-nav#nav1{
+/* Main nav & fallback */
+nav#nav1,
+nav#navFB{
 	font: 16px 'Source Sans Pro', sans-serif;
 	font-weight: 400;
 	line-height: 1em;
+	cursor: pointer;
   background-color: #fff;
 	margin: 0 auto;
 	width: 100%;
@@ -529,17 +534,20 @@ nav#nav1{
 	z-index: 20;
 }
 @media only screen and (min-width: 480px){
-	nav#nav1{
+	nav#nav1,
+	nav#navFB{
 		height: 47px;
 	}
 }
 @media only screen and (min-width: 768px){
-	nav#nav1{
+	nav#nav1,
+	nav#navFB{
 		height:51px;
 	}
 }
 @media only screen and (min-width: 992px){
-	nav#nav1{
+	nav#nav1,
+	nav#navFB{
 		height: 63px;
 	}
 }
@@ -568,14 +576,18 @@ nav#nav1 a:focus .current{
 	text-decoration: none;
 }
 nav#nav1 a,
-nav#nav1 a:visited{
+nav#nav1 a:visited,
+nav#navFB a,
+nav#navFB a:visited{
 	color: #242424;
 	text-decoration: none;
 }
-nav#nav1.borderBottom{
+nav#nav1.borderBottom,
+nav#navFB.borderBottom{
 	border-bottom: 1px solid #858585;
 }
-nav#nav1 ul{
+nav#nav1 ul,
+nav#navFB ul{
 	list-style: none;
 	margin: 0 auto;
 	padding: 0 8px;
@@ -586,30 +598,37 @@ nav#nav1 ul{
 	align-items: center;
 }
 @media only screen and (min-width: 480px){
-	nav#nav1 ul{
+	nav#nav1 ul,
+	nav#navFB ul{
 		padding: 0 1em 0 .5em;
 	}
 }
 @media only screen and (min-width: 992px){
-	nav#nav1 ul{
+	nav#nav1 ul,
+	nav#navFB ul{
 		padding: 0 16px;
 		max-width: 1366px;
 	}
 }
-nav#nav1 li{
+nav#nav1 li,
+nav#navFB li{
 	display: inline-block;
 }
-nav#nav1 li:nth-child(8){
+nav#nav1 li:nth-child(8),
+nav#navFB li:nth-child(2){
 	position: relative;
 }
-nav#nav1 h1{
+nav#nav1 h1,
+nav#navFB h1{
 	font-size: 1.275em;
 	white-space: nowrap;
 	border: 2px solid transparent;
 	padding: 7px 5px 0;
 }
 nav#nav1 a:hover h1,
-nav#nav1 a:focus-within h1{
+nav#nav1 a:focus-within h1,
+nav#navFB a:hover h1,
+nav#navFB a:focus-within h1{
 	background: #e6e6e6;
 	border: 2px solid rgba(0, 0, 0, 0.65);
 	border-radius: 5px;
@@ -618,12 +637,14 @@ nav#nav1 a:focus-within h1{
 	transition: 0.2s;
 }
 @media only screen and (min-width: 480px){
-	nav#nav1 h1{
+	nav#nav1 h1,
+	nav#navFB h1{
 		font-size: 1.7em;
 	}
 }
 @media only screen and (min-width: 768px){
-	nav#nav1 h1{
+	nav#nav1 h1,
+	nav#navFB h1{
 		font-size: 2em;
 	}
 }
@@ -644,7 +665,8 @@ nav#nav1 ul li:not(:first-child):not(:last-child){
 		font-size: 1em;
 	}
 }
-nav#nav1 li a{
+nav#nav1 li a,
+nav#navFB li a{
 	white-space: nowrap;
 }
 nav#nav1 li:not(:first-child):not(:last-child) a{
@@ -662,11 +684,16 @@ nav#nav1 li:not(:first-child):not(:last-child) a:focus{
 nav#nav1 li a:hover,
 nav#nav1 li a:focus,
 nav#nav1 li a:hover span,
-nav#nav1 li a:focus span{
+nav#nav1 li a:focus span,
+nav#navFB li a:hover,
+nav#navFB li a:focus,
+nav#navFB li a:hover span,
+nav#navFB li a:focus span{
 	color: #fff;
 	transition: 0.2s;
 }
-nav#nav1 li button{
+nav#nav1 li button,
+nav#navFB li button{
 	background: none;
 	border: none;
 	border-radius: 5px;
@@ -681,37 +708,45 @@ nav#nav1 li button{
 	-webkit-transform: translate(0, -50%);
 }
 @media only screen and (min-width: 480px){
-	nav#nav1 li button{
+	nav#nav1 li button,
+	nav#navFB li button{
 		padding: 6px 8px;
 	}
 }
-nav#nav1 li button#regular-button{
+nav#nav1 li button{
 	z-index: 21;
 }
-nav#nav1 li button#fallback-button{
+nav#navFB li button{
 	z-index: 22;
 }
 nav#nav1 li button:hover,
-nav#nav1 li button:focus-within{
+nav#nav1 li button:focus-within,
+nav#navFB li button:hover,
+nav#navFB li button:focus-within{
 	background-color: #395375;
 	transition: 0.2s;
 }
-nav#nav1 li button i{
+nav#nav1 li button i,
+nav#navFB li button i{
 	font-size: 1.3em;
 	color: #242424;
 }
 @media only screen and (min-width: 480px){
-	nav#nav1 li button i{
+	nav#nav1 li button i,
+	nav#navFB li button i{
 		font-size: 1.7em;
 	}
 }
 @media only screen and (min-width: 768px){
-	nav#nav1 li button i{
+	nav#nav1 li button i,
+	nav#navFB li button i{
 		font-size: 1.9em;
 	}
 }
 nav#nav1 li button:hover i,
-nav#nav1 li button:focus i{
+nav#nav1 li button:focus i,
+nav#navFB li button:hover i,
+nav#navFB li button:focus i{
 	color: #fff;
 }
 @media only screen and (min-width: 992px){
