--- a/css/cluster.css
+++ b/css/cluster.css
@@ -145,7 +145,7 @@
 	padding-bottom: 56.25%;
 	display: block;
 }
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 992px){
 	.cluster main section div::after{
 		padding-bottom: 66.67%;
 	}
@@ -176,12 +176,17 @@
 	border: none;
 	opacity: .7;
 }
-/* some specs below from Livingstone Online */
 .cluster main section div span{
 	font-size: 1.1em;
+}
+.cluster.zoomcasts main section div span{
+	font-size: 1em;
+}
+/* some specs below from Livingstone Online */
+.cluster main section div span{
 	color: #fff;
 	background-color: rgb(66,66,66);
-	line-height: 1.875em;
+	line-height: 1.5em;
 	text-align: center;
 	width: 100%;
 	/* min-height: 20%; */
