update content css

--- a/css/content.css
+++ b/css/content.css
@@ -70,7 +70,7 @@
 	max-width: 700px;
 }
 .content.zoomcasts main,
-.content.about.biographies main section{
+.content.about.organizers main section{
 	max-width: 700px;
 }
 @media only screen and (min-width: 992px){
@@ -80,7 +80,7 @@
 		width: 75%;
 		max-width: 900px;
 	}
-	.content.about.biographies main{
+	.content.about.organizers main{
 		width: 100%;
 		max-width: 900px;
 	}
@@ -191,8 +191,7 @@
 }
 .content.lesson-plans main h2,
 .content.syllabi main h2,
-.content.about.contributors main h2,
-.content.about.sitemap main h2{
+.content.about main h2{
 	font-size: 1.5em;
 }
 .content.about.error404 main h2{
@@ -200,9 +199,7 @@
 }
 .content.lesson-plans main h2,
 .content.syllabi main h2,
-.content.about.contributors main h2,
-.content.about.sitemap main h2,
-.content.about.error404 main h2{
+.content.about:not(.organizers) main h2{
 	font-weight: 400;
 	font-variant: small-caps;
 	hyphens: none;
@@ -224,23 +221,25 @@
 }
 .content.lesson-plans main h2.top,
 .content.syllabi main h2.top,
-.content.about.contributors main h2.top{
+.content.about main h2.top{
 	top: 30%;
 	left: 50%;
 	transform: translate(-50%, -30%);
 }
 .content.lesson-plans main h2.bottom,
 .content.syllabi main h2.bottom,
-.content.about.contributors main h2.bottom{
+.content.about main h2.bottom{
 	top: 70%;
 	left: 50%;
 	transform: translate(-50%, -70%);
 }
 .content.zoomcasts main h2,
-.content.about.biographies main h2{
-	font-size: 2em;
+.content.about.organizers main h2{
+	font-size: 2.2em;
+	font-variant: small-caps;
 	line-height: 1.5em;
 	color: #242424;
+	margin: .5em auto;
 }
 @media only screen and (min-width: 480px){
 	.content.about.error404 main h2{
@@ -250,8 +249,7 @@
 @media only screen and (min-width: 768px){
 	.content.lesson-plans main h2,
 	.content.syllabi main h2,
-	.content.about.contributors main h2,
-	.content.about.sitemap main h2{
+	.content.about main h2{
 		font-size: 2.3em;
 		max-width: 850px;
 	}
@@ -260,8 +258,8 @@
 		max-width: 850px;
 	}
 	.content.zoomcasts main h2,
-	.content.about.biographies main h2{
-		margin: 1em auto;
+	.content.about.organizers main h2{
+		font-size: 2.4em;
 	}
 }
 .content main h3{
@@ -359,13 +357,13 @@
 .content section p{
 	clear: both;
 }
-.content.about.biographies section p img{
+.content.about.organizers section p img{
 	margin: .5em .75em 0 0;
 	width: 100%;
 	display: inline-block;
 }
 @media only screen and (min-width: 480px){
-	.content.about.biographies section p img{
+	.content.about.organizers section p img{
 		margin: .5em .75em 0 0;
 		width: 50%;
 		float: left;
@@ -373,12 +371,12 @@
 	}	
 }
 @media only screen and (min-width: 768px){
-	.content.about.biographies section p img{
+	.content.about.organizers section p img{
 		width: 30%;
 	}
 }
 @media only screen and (min-width: 992px){
-	.content.about.biographies section p img{
+	.content.about.organizers section p img{
 		width: 25%;
 	}
 }
