--- a/css/cluster.css
+++ b/css/cluster.css
@@ -99,6 +99,9 @@
 	font-weight: 700;
 	font-variant: normal;
 	hyphens: none;
+	-ms-hyphens: none;
+	-moz-hyphens: none;
+	-webkit-hyphens: none;
 	color: #fff;
 	border-bottom: 1px solid #242424;
 	border-radius: 4px 4px 0 0;
@@ -233,6 +236,9 @@
 }
 .cluster main section ul li{
 	hyphens: none;
+	-ms-hyphens: none;
+	-moz-hyphens: none;
+	-webkit-hyphens: none;
 	line-height: 1.5em;
 	border: 1px solid #e6e6e6;
 	border-radius: 5px;
