--- a/css/cluster.css
+++ b/css/cluster.css
@@ -134,6 +134,9 @@
 .cluster.zoomcasts main section p{
 	margin: 0 1em 1em;
 }
+.cluster.zoomcasts main section:nth-child(2) p{
+	margin: 1em;
+}
 /* Adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
 /* Ratio box adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
 /* 8/10 = 80 | 5/7 = 71.43 | 2/3 = 66.67 | 9/16 = 56.25 */
