--- a/css/cluster.css
+++ b/css/cluster.css
@@ -102,6 +102,8 @@
 	-ms-hyphens: none;
 	-moz-hyphens: none;
 	-webkit-hyphens: none;
+	word-break: normal;
+	-ms-word-break: normal;
 	color: #fff;
 	border-bottom: 1px solid #242424;
 	border-radius: 4px 4px 0 0;
@@ -247,6 +249,8 @@
 	-ms-hyphens: none;
 	-moz-hyphens: none;
 	-webkit-hyphens: none;
+	word-break: normal;
+	-ms-word-break: normal;
 	line-height: 1.5em;
 	border: 1px solid #e6e6e6;
 	border-radius: 5px;
