--- a/css/style.css
+++ b/css/style.css
@@ -149,25 +149,16 @@ main aside{
 		margin: 2.75em auto;
 	}
 }
-main section:last-of-type {
+main section:first-child {
+	margin-top: 0;
+}
+main section:last-of-type{
 	margin-bottom: 0;
 }
 main section p,
 main section ol,
 main section ul{
 	text-align: left;
-}
-.founders{
-	margin: 0;
-	display: inline-block;
-}
-@media only screen and (min-width: 992px){
-	.founders{
-		margin-bottom: 1.25em;
-	}
-}
-.founders + section{
-	margin-top: .5em;
 }
 .mailing-list{
 	text-align: center;
@@ -176,12 +167,13 @@ main section ul{
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	margin: 0;
+	margin: .5em auto;
 	padding: 0 1em 1em;
 	display: inline-block;
 }
 .mailing-list p{
 	text-align: center;
+	margin: .5em 0;
 }
 .mailing-list a.contribute{
 	color: #fff;
@@ -199,6 +191,91 @@ main section ul{
 	color: #242424;
 	background: #fff;
 }
+.founders ul{
+	list-style: none;
+	margin: 1em auto 0;
+	padding: 0;
+	display: inline-block;
+}
+/****/
+.section-tiles ul{
+	list-style: none;
+	padding: 0;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.section-tiles ul li{
+	color: #fff;
+	text-align: center;
+	border: 1px solid #242424;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	margin: .5em;
+	flex: 1 1 40%;
+	position: relative;
+	
+}
+.section-tiles ul li::after{
+	content: "";
+  padding-bottom: 66.67%;
+	display: block;
+}
+.section-tiles ul li a,
+.section-tiles ul li a:visited{
+	color: #fff;
+	text-decoration: none;
+	width: 100%;
+  height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+	.section-tiles ul li a span{
+		font-family: 'Noto Serif', serif;
+		font-weight: 600;
+		white-space: nowrap;
+    border: 3px solid #fff;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    margin: 0;
+    padding: 10px;
+    height: 33px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+}
+#site-section-1{
+	background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
+}
+#site-section-1 a span{
+	background: #cb6948;
+}
+#site-section-2{
+	background: linear-gradient(to left top, #fff 50%, #5378ac 50%);
+}
+#site-section-2 a span{
+	background: #5378ac;
+}
+#site-section-3{
+	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
+}
+#site-section-3 a span{
+	background: #728a61;
+}
+#site-section-4{
+	background: linear-gradient(to left top, #fff 50%, #757575 50%);
+}
+#site-section-4 a span{
+	background: #757575;
+}
+/****/
 ol.mission{
 	margin: 0 1em;
 	padding: 0;
