--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,6 @@ main aside{
 		margin: 2.75em auto;
 	}
 }
-main section:first-child {
-	margin-top: 0;
-}
 main section:last-of-type{
 	margin-bottom: 0;
 }
@@ -160,6 +157,20 @@ main section ol,
 main section ul{
 	text-align: left;
 }
+/*start remove*/
+.founders{
+	margin: 0;
+	display: inline-block;
+}
+@media only screen and (min-width: 992px){
+	.founders{
+		margin-bottom: 1.25em;
+	}
+}
+.founders + section{
+	margin-top: .5em;
+}
+/*end remove*/
 .mailing-list{
 	text-align: center;
 	background: #e6e6e6;
@@ -191,195 +202,6 @@ main section ul{
 	color: #242424;
 	background: #fff;
 }
-.founders ul{
-	list-style: none;
-	margin: 1em auto 0;
-	padding: 0;
-	display: inline-block;
-}
-/****/
-.section-tiles{
-	text-align: center;
-	border: 1px solid #242424;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-}
-.section-tiles h2{
-	color: white;
-	background: #395375;
-	margin: 0 auto;
-	padding: .25em 0;
-}
-.section-tiles ul{
-	text-align: center;
-	list-style: none;
-	margin: .5em;
-	padding: 0;
-	display: flex;
-	flex-wrap: wrap;
-}
-.section-tiles li{
-	line-height: 1.5em;
-	border: 1px solid #e6e6e6;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	margin: .75em .5em;
-	padding: .15em;
-	min-height: 35px;
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-	flex: 1 0 calc(25% - 2px - 2em);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-.section-tiles li a,
-.section-tiles li a:visited{
-	font-size: .95em;
-	text-decoration: none;
-	/* font-weight: 600; */
-	color: #242424;
-	/* color: #fff; */
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-.section-tiles li:hover,
-.section-tiles li:focus-within,
-.section-tiles li:hover a,
-.section-tiles li:focus-within a{
-	color: white;
-	background: #395375;
-}
-/* .section-tiles ul{
-	text-align: center;
-	list-style: none;
-	padding: 0;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	flex-wrap: wrap;
-}
-.section-tiles ul li{
-	text-align: center;
-	white-space: nowrap;
-	border: 1px solid #242424;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	margin: .5em;
-	padding: .25em .5em;
-	flex: 0 1 calc(25% - 3em - 1px);
-}
-.section-tiles ul li a{
-	color: black;
-	text-decoration: none;
-} */
-/* .section-tiles ul{
-	list-style: none;
-	padding: 0;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	flex-wrap: wrap;
-}
-.section-tiles ul li{
-	color: #fff;
-	text-align: center;
-	border: 1px solid #242424;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	margin: .75em;
-	flex: 1 1 40%;
-	position: relative;
-	
-}
-.section-tiles ul li::after{
-	content: "";
-  padding-bottom: 56.25%;
-	display: block;
-}
-.section-tiles ul li a,
-.section-tiles ul li a:visited{
-	color: #fff;
-	text-decoration: none;
-	width: 100%;
-  height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-	.section-tiles ul li a span{
-		font-family: 'Noto Serif', serif;
-		font-weight: 600;
-		white-space: nowrap;
-    border: 3px solid #fff;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    margin: 0;
-    padding: 10px;
-    height: 33px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-}*/
-/* #site-section-1{
-	background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
-} */
-/* .section-tiles li#site-section-1{
-	background: #cb6948;
-}
-.section-tiles li#site-section-2{
-	background: #5378ac;
-}
-.section-tiles li#site-section-3{
-	background: #728a61;
-}
-.section-tiles li#site-section-4{
-	background: #757575;
-}
-.section-tiles li:hover {
-	color: #fff;
-}
-.section-tiles li#site-section-1:hover,
-.section-tiles li#site-section-2:hover,
-.section-tiles li#site-section-3:hover,
-.section-tiles li#site-section-4:hover{
-	background: #395375;
-} */
-/* #site-section-1{
-	background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
-}
-#site-section-1 a span{
-	background: #cb6948;
-}
-#site-section-2{
-	background: linear-gradient(to left top, #fff 50%, #5378ac 50%);
-}
-#site-section-2 a span{
-	background: #5378ac;
-}
-#site-section-3{
-	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
-}
-#site-section-3 a span{
-	background: #728a61;
-}
-#site-section-4{
-	background: linear-gradient(to left top, #fff 50%, #757575 50%);
-}
-#site-section-4 a span{
-	background: #757575;
-} */
-/****/
 ol.mission{
 	margin: 0 1em;
 	padding: 0;
