--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ Table of Contents
 ** Main Site Colors **
 
 ** 1.0. Main CSS **
+0.0. Section Tile Colors
 1.1. Main Components
 1.2.1. Cluster Pages [moved to separate file]
 1.2.2. Content Pages [moved to separate file]
@@ -60,6 +61,41 @@ nav#nav1 = 20
 #nav0 = 100
 nav#nav2 #overlay-menu = 200
 */
+
+/** 0.0 Section Tile Colors **/
+
+.section-tiles ul li:nth-child(1){
+	background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
+}
+.section-tiles ul li:nth-child(1) a span{
+	background: #cb6948;
+}
+.section-tiles ul li:nth-child(2){
+	background: linear-gradient(to left top, #fff 50%, #5378ac 50%);
+}
+.section-tiles ul li:nth-child(2) a span{
+	background: #5378ac;
+}
+.section-tiles ul li:nth-child(3){
+	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
+}
+.section-tiles ul li:nth-child(3) a span{
+	background: #728a61;
+}
+.section-tiles ul li:nth-child(4){
+	background: linear-gradient(to left top, #fff 50%, #757575 50%);
+}
+.section-tiles ul li:nth-child(4) a span{
+	background: #757575;
+}
+.section-tiles ul li a:hover,
+.section-tiles ul li a:focus-within{
+	background: linear-gradient(to left top, #fff 50%, #2e2e2e 50%);
+}
+.section-tiles ul li:hover a span,
+.section-tiles ul li:focus-within a span{
+	background: #2e2e2e;
+}
 
 
 /** 1.0 Main CSS **/
@@ -157,20 +193,63 @@ main section ol,
 main section ul{
 	text-align: left;
 }
-/*start remove*/
-.founders{
+.section-tiles{
+	margin-bottom: 2em;
+}
+.section-tiles ul{
+	list-style: none;
+	margin: 0 auto;
+	padding: 0;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.section-tiles ul li{
+	color: #fff;
+	text-align: center;
+	border: 1px solid #242424;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	margin: .75em;
+	flex: 1 1 40%;
+	position: relative;
+	
+}
+.section-tiles ul li::after{
+	content: "";
+	padding-bottom: 56.25%;
+	display: block;
+}
+.section-tiles ul li a,
+.section-tiles ul li a:visited{
+	color: #fff;
+	text-decoration: none;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.section-tiles ul li a span{
+	font-family: 'Noto Serif', serif;
+	font-weight: 600;
+	white-space: nowrap;
+	border: 3px solid #fff;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	margin: 0;
-	display: inline-block;
-}
-@media only screen and (min-width: 992px){
-	.founders{
-		margin-bottom: 1.25em;
-	}
-}
-.founders + section{
-	margin-top: .5em;
-}
-/*end remove*/
+	padding: 10px;
+	height: 33px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+}s
 .mailing-list{
 	text-align: center;
 	background: #e6e6e6;
